--- a/main.html
+++ b/main.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <title>Srm Asset Management</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
 <body>
 
 
 <header>
-	<nav>
-			<div class="logo"><h1 class="animated infinite heartBeat">Srm Asset</h1></div>
-		<div class="menu">
-			<a href="#">Home</a>
-			<a href="#">About</a>
+    <nav>
+            <div class="logo"><h1 class="animated infinite heartBeat">Srm Asset</h1></div>
+        <div class="menu">
+            <a href="#">Home</a>
+            <a href="#">About</a>
             <a href="#">Gallery</a>
             <a href="#">Contact</a>
-		</div>
-	</nav>
-			<main>
-			<section>
-				<h3>Welcome to Srm Asset Management</h3>
-				<h1>DO COME & VISIT US AT<span class="change_content"> </span></h1>
-				<p>"One Place for all you can Imagine"</p>
-				<a href="#" class="btnone">Log In</a>
-				<a href="#" class="btntwo">Sign up</a>
-			</section>
-		</main>
+        </div>
+    </nav>
+            <main>
+            <section>
+                <h3>Welcome to Srm Asset Management</h3>
+                <h1>DO COME & VISIT US AT<span class="change_content"> </span></h1>
+                <p>"One Place for all you can Imagine"</p>
+                <a href="login.html" class="btnone">Log In</a>
+                <a href="register.html" class="btntwo">Sign up</a>
+            </section>
+        </main>
 </header>
 </body>
 </html>
