--- a/main.html
+++ b/main.html
@@ -11,15 +11,15 @@
 
 <header>
     <nav>
-            <div class="logo"><h1 class="animated infinite heartBeat">Srm Asset</h1></div>
+        <div class="logo"><h1 class="animated infinite heartBeat">Srm Asset</h1></div>
         <div class="menu">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Gallery</a>
-            <a href="#">Contact</a>
+            <a href="#"><strong>Home</strong></a>
+            <a href="#"><strong>About</strong></a>
+            <a href="#"><strong>Gallery</strong></a>
+            <a href="#"><strong>Contact</strong></a>
         </div>
     </nav>
-            <main>
+        <main>
             <section>
                 <h3>Welcome to Srm Asset Management</h3>
                 <h1>DO COME & VISIT US AT<span class="change_content"> </span></h1>
