--- a/register.html
+++ b/register.html
@@ -17,10 +17,10 @@
 		<form action="http://127.0.0.1:3001/registerapi" method="POST" class="box absolute-center">
 			<h1>Register</h1>
 			<input type="text" name="" placeholder="Enter Name" required="">
-			<input type="number" name="" placeholder="Mobile Number" required="">
-			<input type="text" name="" placeholder="Username" required=""> 
-            <input type="password" name="" placeholder="Password" required="">
-            <input type="password" name="" placeholder="Confirm Password" required="">
+			<input type="number" mobile_number="" placeholder="Mobile Number" required="">
+			<input type="text" username="" placeholder="Username" required=""> 
+            <input type="password" password="" placeholder="Password" required="">
+            <input type="password" confirm_password="" placeholder="Confirm Password" required="">
 			<input type="submit" value="Register">
 		</form>
 	</header>
