--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 			</ul>
 		</div>
 		<header>
-		<form action="http://127.0.0.1:3001/loginapi" method="POST" class="box absolute-center">
+		 <form action="../Asset-mangement/main.html" method="POST" class="box absolute-center">             <!--action="http://127.0.0.1:3001/loginapi" method="POST"-->
 			<h1>Login</h1>
             <p class="muted"> Please enter your login and password!</p> 
             <input type="text" name="" placeholder="Username" required> 
