--- a/register.html
+++ b/register.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<title>Registration Page</title>
     <link rel="stylesheet" type="text/css" href="css/globalStyle.css">
-    <link rel="stylesheet" type="text/css" href="css/registerStyle.css">
+	<link rel="stylesheet" type="text/css" href="css/registerStyle.css">
+	<script src="register.js"></script>
 </head>
 <body>
 		<div>
@@ -14,13 +15,13 @@
 			</ul>
 		</div>
 		<header>
-		<form action="http://127.0.0.1:3001/registerapi" method="POST" class="box absolute-center">
+		 <form name="RegForm" action="../Asset-mangement/login.html" method="POST" onsubmit="return Register()" class="box absolute-center">   <!--action="http://127.0.0.1:3001/registerapi" method="POST" -->
 			<h1>Register</h1>
-			<input type="text" name="" placeholder="Enter Name" required="">
-			<input type="number" mobile_number="" placeholder="Mobile Number" required="">
-			<input type="text" username="" placeholder="Username" required=""> 
-            <input type="password" password="" placeholder="Password" required="">
-            <input type="password" confirm_password="" placeholder="Confirm Password" required="">
+			<input type="text" id="name" name="Name" placeholder="Enter Name">
+			<input type="number" id="number" name="Number" placeholder="Mobile Number">
+			<input type="text" id="username" name="UserName" placeholder="Username"> 
+            <input type="password" id="password" name="Password" placeholder="Password">
+            <input type="password" id="confirmpassword" name="ConfirmPassword" placeholder="Confirm Password">
 			<input type="submit" value="Register">
 		</form>
 	</header>
